# iodine

./: .gitignore  .snitch.yaml  Cargo.toml  devenv.nix  devenv.yaml  docker-compose.yaml
example_registry/: devenv.nix  example.yaml  iodine-registry  pipelines.yaml
example_registry/src/pipeline/: task_1.py
iodine-api/iodine-api-graphql/: Cargo.toml
iodine-api/iodine-api-graphql/src/: lib.rs  server.rs
iodine-api/iodine-api-graphql/src/gql_ops/: coordinator.rs
iodine-api/iodine-api-grpc/: Cargo.toml
iodine-api/iodine-api-grpc/src/: client.rs  lib.rs  mapping.rs
iodine-api/iodine-protobuf/: Cargo.toml  build.rs
iodine-api/iodine-protobuf/proto/iodine/v1/: common.proto  pipeline_registry.proto
iodine-api/iodine-protobuf/src/: lib.rs  util.rs
iodine-api/iodine_proto/v1/: common.proto  pipeline_registry.proto
iodine-common/: Cargo.toml
iodine-common/src/: lib.rs
iodine-common/src/code_registry/: mod.rs
iodine-common/src/command/: command_router.rs  discovery.rs  mod.rs
iodine-common/src/common/: mod.rs  ordering.rs  pagination.rs
iodine-common/src/coordinator/: mod.rs
iodine-common/src/error/: mod.rs  worker.rs
iodine-common/src/event/: log_record.rs  mod.rs  severity.rs
iodine-common/src/pipeline/: definition.rs  run.rs
iodine-common/src/resource_manager/: exec_manager.rs  io_manager.rs  mod.rs
iodine-common/src/resource_manager/default/: local_fs_io_mgr.rs  local_process_ex_mgr.rs  mod.rs
iodine-common/src/state/: base.rs  coordinator.rs  launcher.rs  mod.rs  pipeline.rs  task.rs
iodine-common/src/task/: definition.rs  dependency.rs  instance.rs  mod.rs  run.rs
iodine-contrib/python/iodine-pysdk/: Cargo.toml
iodine-playground/: Cargo.toml
iodine-playground/src/: main.rs
iodine-registry/: Cargo.toml  pipelines.yaml
iodine-registry/src/: main.rs  parser.rs  schema.rs  server.rs
iodine-scheduler/: Cargo.toml
iodine-scheduler/src/: lib.rs  main.rs
iodine-scheduler/src/coordinator/: default.rs  mod.rs
iodine-scheduler/src/discovery/: mod.rs
iodine-scheduler/src/launcher/: default.rs  exec_mgr_registry.rs  execution_graph.rs  mod.rs  scheduling.rs  state.rs  util.rs
iodine-scheduler/src/resource_manager/: default.rs  mod.rs
iodine-state/iodine-migration/: Cargo.toml
iodine-state/iodine-migration/src/: lib.rs
iodine-state/iodine-migration/src/db_entities/: coordinator.rs  event.rs  launcher.rs  mod.rs  pipeline.rs  task.rs
iodine-state/iodine-migration/src/migrations/: m20220101_000001_create_table.rs
iodine-state/iodine-persistence-pg/: Cargo.toml
iodine-state/iodine-persistence-pg/src/: db.rs  event_logging.rs  lib.rs  mapping.rs
iodine-state/iodine-persistence-pg/src/entities/: coordinators.rs  event_log.rs  launchers.rs  mod.rs  pipeline_definitions.rs  pipeline_runs.rs  prelude.rs  sea_orm_active_enums.rs  task_definitions.rs  task_dependencies.rs  task_instances.rs  task_runs.rs
iodine-state/iodine-persistence-pg/src/trait_impl/: base.rs  coordinator.rs  launcher.rs  mod.rs  pipeline.rs  task.rs
