[package]
name = "iodine-common"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
chrono = { workspace = true, features = ["serde"] }
strum = { workspace = true }
strum_macros = { workspace = true }
