[package]
name = "iodine-common"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true }
