[package]
name = "iodine-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
iodine-common = { workspace = true }

async-trait = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }


