[package]
name = "iodine-api-graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
iodine-common = { workspace = true }
iodine-persistence-pg = { workspace = true }

tokio = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
