[package]
name = "iodine-api-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
iodine-common = { workspace = true }
iodine-protobuf = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
