[package]
name = "iodine-protobuf"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
