[package]
name = "iodine-persistence-pg"
version = "0.1.0"
edition = "2024"

[dependencies]
iodine-common = { workspace = true }

uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true } 
chrono = { workspace = true, features = ["serde"] }
sea-orm = { workspace = true, features = [
    "sqlx-postgres", 
    "runtime-tokio-rustls", 
    "macros", 
    "with-chrono", 
    "with-uuid", 
    "with-json",
    "debug-print"
] }
